# AndroidVideoMatting

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tencent/ncnnbodyseg/: CameraActivity.java  MainActivity.java
app/src/main/java/com/tencent/ncnnbodyseg/adapter/: MyRecyclerViewAdapter.java
app/src/main/java/com/tencent/ncnnbodyseg/camera/: Camera2FrameCallback.java  Camera2Wrapper.java  CameraUtil.java
app/src/main/java/com/tencent/ncnnbodyseg/media/: CameraNativeContext.java  MyGLSurfaceView.java  MyNativeContext.java
app/src/main/jni/: BodySeg.cpp  BodySeg.h  CMakeLists.txt  JniImp.cpp  NativeContext.cpp  NativeContext.h  nanodet.cpp  nanodet.h  nanodetncnn.cpp  ndkcamera.cpp
app/src/main/jni/ncnn-20211208-android-vulkan/armeabi-v7a/include/ncnn/: platform.h
app/src/main/jni/ncnn-20211208-android-vulkan/x86_64/include/ncnn/: platform.h
app/src/main/jni/render/: BaseGLRender.h  GLCameraRender.cpp  GLCameraRender.h  RGB2NV21Helper.cpp  RGB2NV21Helper.h
app/src/main/jni/util/: ImageDef.h
app/src/main/res/layout/: content_main.xml
app/src/main/res/values/: strings.xml
